Main menu completed.

--- a/src/namespaces.dox
+++ b/src/namespaces.dox
@@ -4,22 +4,22 @@
  */
 
 /**
- * @namespace Coruh
- * @brief Root namespace for all Coruh-related code.
+ * @namespace Anaz
+ * @brief Root namespace for all Anaz-related code.
  *
- * This is the top-level namespace for all components, classes, and functions related to the Coruh library.
+ * This is the top-level namespace for all components, classes, and functions related to the Anaz library.
  */
  
  /**
- * @namespace Coruh::Utility
+ * @namespace Anaz::Utility
  * @brief Namespace for general utility functions and classes.
  *
  * This namespace contains a collection of utility functions and classes that provide commonly-used functionality.
  */
 
  /**
- * @namespace Coruh::Calculator
- * @brief Namespace for calculator functions and classes.
+ * @namespace Anaz::Forestry
+ * @brief Namespace for forestry functions and classes.
  *
- * This namespace contains a collection of calculator functions and classes that provide commonly-used functionality.
+ * This namespace contains a collection of forestry functions and classes that provide commonly-used functionality.
  */
